--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="viewport" c"width=device-width, initial-scale=1.0" />
+    <title>{% block page_name %}{% endblock page_name %}| Nbnb</title>
   </head>
   <body>
-    &copy; Nbnb
+    
+    {% include "partials/header.html" %}
+    
+    
+    {% block content %} {% endblock content %}
+
+    {% include "partials/footer.html" %}
+    
+    
   </body>
 </html>
