--- a/templates/rooms/search.html
+++ b/templates/rooms/search.html
@@ -14,23 +14,24 @@
     <form method="get" action="{% url 'rooms:search' %}">
         <div>
             <label for="city">City</label>
-            <input value="{{city}}" id="city" name="city" placeholder="Search by City"/>  
+            <input value="{{city}}" id="city" name="city" placeholder="Search by City" />  
         </div>
 
         <div>
             <label for="country">Country</label>
             <select id="country" name="country">
                 {% for country in countries %}
-                    <option value="{{country.code}}">{{country.name}}</option>
+                    <option value="{{country.code}}" {% if country.code == s_country %}selected{% endif %}>{{country.name}}</option>
                 {% endfor %}
             </select>
         </div>
         
         <div>
-        <label for="room_type">Room Types</label>
+        <label for="room_type">Room Type</label>
             <select id="room_type" name="room_type">
+                    <option value="0" {% if s_room_type == 0 %}selected{% endif %}>Any kind</option>
                 {% for room_type in room_types %}
-                    <option value="{{room_type.id}}">{{room_type.name}}</option>
+                    <option value="{{room_type.pk}}" {% if s_room_type == room_type.pk %}selected{% endif %}>{{room_type.name}}</option>
                 {% endfor %}
             </select>
         </div>
