--- a/templates/rooms/search.html
+++ b/templates/rooms/search.html
@@ -71,8 +71,8 @@
             <ul>
             {% for facility in facilities %}
                 <li>
-                <label for="a_{{facility.pk}}">{{facility.name}}</label>
-                <input id="a_{{facility.pk}}" name="facilities" type="checkbox" value="{{facility.pk}}" />
+                <label for="f_{{facility.pk}}">{{facility.name}}</label>
+                <input id="f_{{facility.pk}}" name="facilities" type="checkbox" value="{{facility.pk}}" />
             {% endfor %}
                 
             </ul>
