200502_13-6. Filtering Like a Boss part Two

--- a/templates/rooms/search.html
+++ b/templates/rooms/search.html
@@ -61,22 +61,20 @@
                 type="checkbox" 
                 name="instant" 
                 id="instant" 
-                placeholder="Instant" 
                     {% if instant %}
                     checked
                     {% endif %}
                 />
         </div>
         <div>
-            <label for="super_host">By Superhost Only?</label>
+            <label for="superhost">By Superhost Only?</label>
             <input 
             type="checkbox" 
-            name="super_host" 
-            id="super_host" 
-            placeholder="Super_host" 
-                    {% if super_host %}
-                    checked
-                    {% endif %}
+            name="superhost" 
+            id="superhost" 
+                {% if superhost %}
+                checked
+                {% endif %}
             />
         </div>
         <div>
